--- a/.github/workflows/promote_package.yml
+++ b/.github/workflows/promote_package.yml
@@ -32,7 +32,6 @@ jobs:
       - name: Get package identifier and promote
         run: |
           # Query for the package and get its identifier
-          PACKAGE_QUERY="filename:${PACKAGE_NAME}-${{ github.event.inputs.package_version }}.zip"
           echo "Searching for package with query: $PACKAGE_QUERY"
           
           PACKAGE_DATA=$(cloudsmith list package ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_STAGING_REPO }} -q "$PACKAGE_QUERY" -F json)
@@ -46,6 +45,9 @@ jobs:
           fi
           
           echo "Found package identifier: $IDENTIFIER"
+
+          # Job successfully run thru the webhook, now adding the ready production tag for this package
+          cloudsmith tags add ${{ env.CLOUDSMITH_NAMESPACE }}/${{ env.CLOUDSMITH_STAGING_REPO }}/$IDENTIFIER ready-for-production
           
           # Promote package using the identifier
           cloudsmith mv --yes \
