--- a/.github/workflows/realease_package.yml
+++ b/.github/workflows/realease_package.yml
@@ -35,6 +35,12 @@ jobs:
       - name: List directory contents
         run: ls -la dist/
         shell: bash
+        
+      - name: Install Cloudsmith CLI
+        uses: cloudsmith-io/cloudsmith-cli-action@v1.0.1
+        with:
+          oidc-namespace: ${{ env.CLOUDSMITH_NAMESPACE }}
+          oidc-service-slug: ${{ env.CLOUDSMITH_SERVICE_SLUG }}
 
       - name: Push package to Cloudsmith
         run: |
