--- a/.github/workflows/build_package.yml
+++ b/.github/workflows/build_package.yml
@@ -3,10 +3,10 @@ name: Build Python Package
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 
 permissions:
   contents: read
@@ -34,10 +34,9 @@ jobs:
           pip install build
 
       - name: Build package
-        run: python -m build
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           name: python-package
           path: dist/
