--- a/.github/workflows/promote_package.yml
+++ b/.github/workflows/promote_package.yml
@@ -2,12 +2,16 @@ name: Promote Python Package
 
 on:
   workflow_dispatch:
-    types: [cloudsmith_package_sync]
+    inputs:
+      package_version:
+        description: 'Package version to promote (e.g., 0.0.1)'
+        required: true
+        type: string
 
 env:
   CLOUDSMITH_NAMESPACE: ${{ vars.CLOUDSMITH_NAMESPACE }}
-  CLOUDSMITH_STAGING_REPO: 'staging'
-  CLOUDSMITH_PRODUCTION_REPO: 'production'
+  CLOUDSMITH_STAGING_REPO: 'production'
+  CLOUDSMITH_PRODUCTION_REPO: 'staging'
   CLOUDSMITH_SERVICE_SLUG: ${{ vars.CLOUDSMITH_SERVICE_SLUG }}
   PACKAGE_NAME: 'example_package'
 
